Move geronimo and selenium up to the top
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@654705 13f79535-47bb-0310-9956-ffa450edef68